Sculpt remesh inverts normal when fix poles is activated. #70291

Closed
opened 2019-09-27 10:06:03 +02:00 by Tonatiuh de San Julián · 7 comments

System Information
Operating system: Linux-5.0.0-29-generic-x86_64-with-Ubuntu-19.04-disco 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.40

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-27 02:45, hash: 92686c667e
Worked: (optional)

Short description of error
Sculpt remesh invert the normal of some faces when fix poles is activated

Exact steps for others to reproduce the error
Open default blender file
go to sculpt, make a remesh with 0.01m
Use the grab tool to make deformation.
Remesh with 0.01m and fix poles activated

Captura de pantalla de 2019-09-27 10-04-20.png

**System Information** Operating system: Linux-5.0.0-29-generic-x86_64-with-Ubuntu-19.04-disco 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.40 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-27 02:45, hash: `92686c667e` Worked: (optional) **Short description of error** Sculpt remesh invert the normal of some faces when fix poles is activated **Exact steps for others to reproduce the error** Open default blender file go to sculpt, make a remesh with 0.01m Use the grab tool to make deformation. Remesh with 0.01m and fix poles activated ![Captura de pantalla de 2019-09-27 10-04-20.png](https://archive.blender.org/developer/F7776664/Captura_de_pantalla_de_2019-09-27_10-04-20.png)

Added subscriber: @TonatiuhdeSanJulian

Added subscriber: @TonatiuhdeSanJulian

This issue was referenced by 7ae549448e

This issue was referenced by 7ae549448eabe633091a0c94257dc6090eda0d64
Pablo Dobarro was assigned by Jacques Lucke 2019-09-27 17:17:07 +02:00
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

I can still reproduce the bug. The fix didn't work for me:
vokoscreen-2019-09-28_09-44-07.mp4

I can still reproduce the bug. The fix didn't work for me: [vokoscreen-2019-09-28_09-44-07.mp4](https://archive.blender.org/developer/F7778326/vokoscreen-2019-09-28_09-44-07.mp4)

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Added subscriber: @jfmatheu

Added subscriber: @jfmatheu
Member

Closed as duplicate of #70326

Closed as duplicate of #70326
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70291
No description provided.