Fix T70291: Sculpt remesh inverts normal when fix poles is activated

Reviewed By: brecht

Maniphest Tasks: T70291

Differential Revision: https://developer.blender.org/D5916